Added a random button

--- a/src/app/apod/apod.component.html
+++ b/src/app/apod/apod.component.html
@@ -14,5 +14,7 @@
     </div>
   
     <p>{{ apod.explanation }}</p>
+
+    <button *ngIf="date" [routerLink]="['/apod', this.date]">Random</button>
   
   </main>
