--- a/src/app/apod/apod.component.html
+++ b/src/app/apod/apod.component.html
@@ -6,11 +6,13 @@
     <img *ngIf="apod.media_type==='image'" [src]="apod.url" [alt]="apod.title">
   
     <!-- Display and embed the YouTube video if the media_type is set to video -->
-    <iframe *ngIf="apod.media_type==='video'" [src]="apod.url | safe: 'resourceUrl'" frameborder="0" allowfullscreen></iframe>
-
+    <div id="video" *ngIf="apod.media_type==='video'">
+        <iframe [src]="apod.url | safe: 'resourceUrl'" frameborder="0" allowfullscreen></iframe>
+    </div>
+      
     <div>
-      <span *ngIf="apod.copyright">&copy; {{ apod.copyright }} </span>
-      {{ apod.date }}
+    <span *ngIf="apod.copyright" class="copy">&copy; {{ apod.copyright }} </span>
+    {{ apod.date }}
     </div>
   
     <p>{{ apod.explanation }}</p>
